# pytest-kwparametrize

./: CHANGES.rst  LICENSE  README.md  README.rst  mypy.ini  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-package.yml
doc/: Makefile  conf.py  index.rst  kwparametrize.rst  reference.rst  test_combinations.py  test_expectation.py
doc/example/: kwparametrize.rst  test_conditional_raising.py  test_indirect.py  test_indirect_list.py  test_parametrize.py  test_pytest_param_example.py  test_scenarios.py  test_time.py
doc/example/defer_setup/: conftest.py  test_backends.py
src/pytest_kwparametrize/: plugin.py  version.py
src/pytest_kwparametrize/tests/: test_kwparametrize.py
