[metadata]
name = pytest_kwparametrize
version = attr: pytest_kwparametrize.version.__version__
author = Antti Kaihola
author_email = 13725+akaihola@users.noreply.github.com
license = MIT
license_file = LICENSE
description = Alternate syntax for @pytest.mark.parametrize with test cases as dictionaries and default value fallbacks
# long_description is read and manipulated in setup.py
long_description_content_type = text/x-rst
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
project_urls =
    Source Code = https://github.com/akaihola/pytest-kwparametrize
    Change Log = https://github.com/akaihola/pytest-kwparametrize/blob/master/CHANGES.rst
url = https://github.com/akaihola/pytest-kwparametrize

[options]
packages = find:
package_dir =
    =src
install_requires =
    pytest >= 6

[options.entry_points]
pytest11 =
    pytest_kwparametrize = pytest_kwparametrize.plugin
